# torq

./: .gitignore  DESIGN.md  README.md  pyproject.toml  setup.py  usage.py
csrc/: exposition.h  hooks.h  interception.h  torq.c  utils.h  wrappers.h
csrc/impl/: exposition.c  hooks.c  interception.c  wrappers.c
csrc/interception/: entrypoint.c  interception.c  interception.h  state.h  utils.h
csrc/interception/symbols/: event.c  event.h  memory.c  memory.h  sync.c  sync.h
torq/: __init__.py  _torq.pyi  compiler.py  config.py  dag.py  nodes.py  pipeline.py  pipes.py  registry.py  runnable.py  utils.py
torq/compiler/: __init__.py  backend.py  compile.py  dag.py  frontend.py  nodes.py  registry.py  types.py
torq/compiler/_fulqrum/: __init__.py  tracer.py
torq/core/: pipeline.py  pipes.py
torq/cuda/: _C.pyi  __init__.py  _torq.pyi  handlers.py  interceptors.py  launcher.py  registry.py  stream.py  tracer.py  types.py  wrappers.py
