[project]
name = "torq"
version = "0.1.0"
description = "Deterministic pipeline composition and compilation"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = []

[project.optional-dependencies]
vision = ["opencv-python", "torch", "jax[cuda13]"]
visionrt = ["torch", "visionrt @ https://github.com/abiel-almonte/visionrt/releases/download/v0.2.0/visionrt-0.1.0-cp313-cp313-linux_x86_64.whl"]

[dependency-groups]
dev = [
    "black",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"